Bug 253742 No way of installing platform specific XPCOM components (dll/so) based on user OS. patch by jens.b@web.de r=bsmedberg a=asa